<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:cursorVisible="false"
            android:hint="@string/name"
            android:inputType="text" />

        <TextView
            style="@style/headers"
            android:layout_marginLeft="16dp"
            android:text="@string/toppings" />

        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/whipped_cream" />

        <CheckBox
            android:id="@+id/chocolate"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="14dp"
            android:paddingLeft="10dp"
            android:text="@string/chocolate" />

        <TextView
            style="@style/headers"
            android:layout_marginLeft="16dp"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="37dp"
                android:layout_height="40dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:onClick="decrement"
                android:text="-"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="2"
                android:textColor="#000000"
                android:textSize="20sp" />

            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="16dp"
                android:onClick="increment"
                android:text="+"
                android:textSize="15sp"
                android:textColor="#FAFAFA"/>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:onClick="submitOrder"
            android:text="@string/order" />
    </LinearLayout>
</ScrollView>
